ajout stat hotel
