# Wuhu_Games/backend/routes/statistiques.routes.js
@@ -2,7 +2,8 @@ import { Router } from "express"
 import {
   getViews,
   addView,
-  getCommandes
+  getCommandes,
+  getHotelReservations
 } from "../controllers/statistiques.controller.js"
 
 const router = Router()
@@ -10,5 +11,6 @@ const router = Router()
 router.get("/views/:username", getViews)
 router.post("/views/:username", addView)
 router.get("/commandes/:username", getCommandes)
+router.get("/hotels/:username/reservations", getHotelReservations)
 
 export default router
